Bug 2029533 - Newtab Sections and follow button alignment issue only on 3 column breakpoint r=home-newtab-reviewers,maxx
Differential Revision: https://phabricator.services.mozilla.com/D292106

--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/CardSections/_CardSections.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/CardSections/_CardSections.scss
@@ -570,7 +570,7 @@
       width: auto;
 
       .body-wrapper {
-        width: 989px;
+        width: 975px;
       }
     }
 
@@ -580,7 +580,7 @@
       .body-wrapper {
         display: flex;
         flex-direction: column;
-        width: 1311px;
+        width: 1290px;
       }
 
       .ds-highlights .card-outer {
